--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "@abcnews/dev-proxy": "^1.2.1",
     "@abcnews/env-utils": "^3.1.0",
     "@abcnews/mount-utils": "^2.0.0",
+    "@abcnews/progress-utils": "^1.3.1",
+    "@abcnews/terminus-fetch": "^5.0.0",
+    "@abcnews/url2cmid": "^1.1.1",
     "svelte": "^3.59.1"
   }
 }
