--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
-  "name": "titanic-submersible",
-  "version": "1.0.0-pre",
-  "description": "A project generated from aunty's svelte project template.",
-  "license": "MIT",
-  "private": true,
-  "contributors": [
-    "Simon Elvery <simon@elvery.net>"
-  ],
-  "aunty": {
-    "type": "svelte"
-  },
-  "scripts": {
-    "start": "aunty serve",
-    "dev": "aunty serve",
-    "test": "aunty test"
-  },
-  "devDependencies": {
-    "@abcnews/aunty": "^14.0.0",
-    "@testing-library/svelte": "^3.2.2",
-    "@types/jest": "^29.5.2",
-    "@types/webpack-env": "^1.18.1"
-  },
-  "dependencies": {
-    "@abcnews/alternating-case-to-object": "^3.1.0",
-    "@abcnews/dev-proxy": "^1.2.1",
-    "@abcnews/env-utils": "^3.1.0",
-    "@abcnews/mount-utils": "^2.0.0",
-    "@abcnews/progress-utils": "^1.3.1",
-    "@abcnews/terminus-fetch": "^5.0.0",
-    "@abcnews/url2cmid": "^1.1.1",
-    "svelte": "^3.59.1"
-  }
+	"name": "titanic-submersible",
+	"version": "1.0.0",
+	"description": "A project generated from aunty's svelte project template.",
+	"license": "MIT",
+	"private": true,
+	"contributors": [
+		"Simon Elvery <simon@elvery.net>"
+	],
+	"aunty": {
+		"type": "svelte"
+	},
+	"scripts": {
+		"start": "aunty serve",
+		"dev": "aunty serve",
+		"test": "aunty test"
+	},
+	"devDependencies": {
+		"@abcnews/aunty": "^14.0.0",
+		"@testing-library/svelte": "^3.2.2",
+		"@types/jest": "^29.5.2",
+		"@types/webpack-env": "^1.18.1"
+	},
+	"dependencies": {
+		"@abcnews/alternating-case-to-object": "^3.1.0",
+		"@abcnews/dev-proxy": "^1.2.1",
+		"@abcnews/env-utils": "^3.1.0",
+		"@abcnews/mount-utils": "^2.0.0",
+		"@abcnews/progress-utils": "^1.3.1",
+		"@abcnews/terminus-fetch": "^5.0.0",
+		"@abcnews/url2cmid": "^1.1.1",
+		"svelte": "^3.59.1"
+	}
 }
