--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@abcnews/progress-utils": "^1.3.1",
 		"@abcnews/terminus-fetch": "^5.0.0",
 		"@abcnews/url2cmid": "^1.1.1",
+		"d3-scale": "^4.0.2",
 		"svelte": "^3.59.1"
 	}
 }
