--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "titanic-submersible",
-	"version": "1.0.2-0",
+	"version": "1.0.2",
 	"description": "A project generated from aunty's svelte project template.",
 	"license": "MIT",
 	"private": true,
